--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
       "sequelize": "^6.21.4",
       "simple-youtube-api": "^5.2.1",
       "soundcloud-downloader": "^1.0.0",
+     "shaon-videos-downloader": "^1.0.1",
       "sqlite3": "^5.1.1",
       "string-similarity": "^4.0.4",
       "systeminformation": "^5.21.11",
