--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
   "keywords": [
       "bot",
       "facebook",
-      "projectcyber",
+      "projectmirai",
       "messenger",
       "javascript",
-      "islamick",
-      "cyber",
-      "chat"
+      "miraibot",
+      "messengerbot",
+      "chatbot"
   ],
   "author": "AMINUL-SORDAR",
   "license": "GPL-3.0",
