--- a/config.json
+++ b/config.json
@@ -16,13 +16,13 @@
     "EMAIL": "",
     "PASSWORD": "",
     "OTPKEY": "",
-    "BOTNAME": "MIRAI-BOT-LOVER",
+    "BOTNAME": "MIRAI-BOT-LOVER-BY-WILLY",
     "PREFIX": "/",
     "ADMINBOT": [
-        "100071880593545"
+        "100094688857930"
     ],
     "NDH": [
-        "100071880593545"
+        "100094688857930"
     ],
     "DATABASE": {
         "sqlite": {
