--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "bugs": {
       "url": "https://github.com/Aminulsordar/Mirai-Bot/issues"
   },
-  "homepage": "https://github.com/Aminulsordar",
+  "homepage": "https://github.com/willpoqigithub",
   "dependencies": {
       "@distube/ytdl-core": "^4.13.2",
       "@miraipr0ject/assets": "^1.0.9",
