--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "MIRAI-BOT",
   "version": "10.1.1",
-  "description": "MADE BY WILLY-MAGUSIB,
+  "description": "MADE BY WILLY-MAGUSIB,"
   "main": "mirai.js",
   "engines": {
       "node": "20.x",
