--- a/appState.json
+++ b/appState.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261575947474352%22%3A%22kVQMnnVm%22%2C%2261577410282348%22%3A%228WAiDyzp%22%2C%2261577157816073%22%3A%228r4RpbxC%22%2C%2261576708903480%22%3A%22PHbdbTw8%22%2C%2261566760862227%22%3A%22kqjVyFWO%22%2C%2261562193592048%22%3A%221ryZPYPy%22%7D",
+        "value": "%7B%2261575947474352%22%3A%22kVQMnnVm%22%2C%2261577410282348%22%3A%228WAiDyzp%22%2C%2261577157816073%22%3A%228r4RpbxC%22%2C%2261576708903480%22%3A%22PHbdbTw8%22%2C%2261566760862227%22%3A%22vEfLsDVL%22%2C%2261562193592048%22%3A%221ryZPYPy%22%2C%2261551823688343%22%3A%22Df9WzU4G%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-07-07T02:40:56.016Z",
-        "lastAccessed": "2025-07-07T02:40:56.017Z"
+        "creation": "2025-07-07T09:55:51.910Z",
+        "lastAccessed": "2025-07-07T09:55:51.911Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-07T02:40:56.017Z",
-        "lastAccessed": "2025-07-07T02:40:56.017Z"
+        "creation": "2025-07-07T09:55:51.911Z",
+        "lastAccessed": "2025-07-07T09:55:51.911Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-07T02:40:56.017Z",
-        "lastAccessed": "2025-07-07T02:40:56.018Z"
+        "creation": "2025-07-07T09:55:51.911Z",
+        "lastAccessed": "2025-07-07T09:55:51.911Z"
     },
     {
         "key": "locale",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-07T02:40:56.018Z",
-        "lastAccessed": "2025-07-07T02:40:56.018Z"
+        "creation": "2025-07-07T09:55:51.911Z",
+        "lastAccessed": "2025-07-07T09:55:51.911Z"
     },
     {
         "key": "vpd",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-07T02:40:56.018Z",
-        "lastAccessed": "2025-07-07T02:40:56.018Z"
+        "creation": "2025-07-07T09:55:51.911Z",
+        "lastAccessed": "2025-07-07T09:55:51.911Z"
     },
     {
         "key": "ps_l",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-07T02:40:56.018Z",
-        "lastAccessed": "2025-07-07T02:40:56.018Z"
+        "creation": "2025-07-07T09:55:51.911Z",
+        "lastAccessed": "2025-07-07T09:55:51.911Z"
     },
     {
         "key": "ps_n",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-07T02:40:56.018Z",
-        "lastAccessed": "2025-07-07T02:40:56.018Z"
+        "creation": "2025-07-07T09:55:51.911Z",
+        "lastAccessed": "2025-07-07T09:55:51.911Z"
     },
     {
         "key": "pas",
@@ -68,52 +68,70 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-07T02:40:56.018Z",
-        "lastAccessed": "2025-07-07T02:40:56.018Z"
+        "creation": "2025-07-07T09:55:51.911Z",
+        "lastAccessed": "2025-07-07T09:55:51.911Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "1.4375",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-07T09:55:51.911Z",
+        "lastAccessed": "2025-07-07T09:55:51.911Z"
+    },
+    {
+        "key": "wd",
+        "value": "501x1114",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-07T09:55:51.911Z",
+        "lastAccessed": "2025-07-07T09:55:51.911Z"
     },
     {
         "key": "c_user",
-        "value": "61551823688343",
+        "value": "61566760862227",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-07T02:40:56.018Z",
-        "lastAccessed": "2025-07-07T02:40:56.018Z"
+        "creation": "2025-07-07T09:55:51.911Z",
+        "lastAccessed": "2025-07-07T09:55:51.911Z"
     },
     {
         "key": "xs",
-        "value": "41%3ARLVC7f9w_gw8gA%3A2%3A1751854471%3A-1%3A-1",
+        "value": "34%3AUOjW6UDZl0wh4g%3A2%3A1751882141%3A-1%3A-1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-07T02:40:56.018Z",
-        "lastAccessed": "2025-07-07T02:40:56.018Z"
+        "creation": "2025-07-07T09:55:51.911Z",
+        "lastAccessed": "2025-07-07T09:55:51.912Z"
     },
     {
         "key": "fr",
-        "value": "0Sf13fNmH3NYr7K13.AWdxhPDP3bTwKgDNFTtcgXFht3JFgt0WkhPsSk44F6YgfN9MeL0.BoZw4V..AAA.0.0.BoazOy.AWeBcyIiTQYqaDxa6yFogxD07B0",
+        "value": "0Sf13fNmH3NYr7K13.AWcGRK23q1y2oj20rP9YD6abm_tBzmIbbt2zYD2Lf5IPDIcqqWA.BoZw4V..AAA.0.0.Boa5mi.AWfjOVB_NJDFnZOq-hSnqCopqz8",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-07T02:40:56.018Z",
-        "lastAccessed": "2025-07-07T02:40:56.018Z"
+        "creation": "2025-07-07T09:55:51.912Z",
+        "lastAccessed": "2025-07-07T09:55:51.912Z"
     },
     {
         "key": "fbl_st",
-        "value": "100639240%3BT%3A29197600",
+        "value": "100627843%3BT%3A29198035",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-07T02:40:56.018Z",
-        "lastAccessed": "2025-07-07T02:40:56.018Z"
+        "creation": "2025-07-07T09:55:51.912Z",
+        "lastAccessed": "2025-07-07T09:55:51.912Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2862%3Btimestamp%3A1751856050",
+        "value": "v2%3Bclient_version%3A2862%3Btimestamp%3A1751882146",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-07T02:40:56.018Z",
-        "lastAccessed": "2025-07-07T02:40:56.018Z"
+        "creation": "2025-07-07T09:55:51.912Z",
+        "lastAccessed": "2025-07-07T09:55:51.912Z"
     }
-        ]
+]
